refac: add start sale
